external-crates/move/crates/move-compiler/tests/move_2024/parser/path_usage.exp
error[E04027]: invalid 'move' usage
   ┌─ tests/move_2024/parser/path_usage.move:16:9
   │
16 │         move x.y.z;
   │         ^^^^ Invalid 'move'. 'move' on a path access works only with variables, e.g. 'move x'

